fixed horizontal scrolling

--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -85,6 +85,10 @@ $main-font: 'Crimson Pro', serif;
 
 
 @media(max-width: 415px) {
+    body {
+        overflow-x: hidden;
+    }
+
     #container {
         margin-top: 50px;
         margin-left: 15px;
